--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,7 @@
 <!-- start custom footer snippets -->
+<a href="http://www.easycounter.com/">
+	<img src="http://www.easycounter.com/counter.php?beahacker"
+	border="0" alt="Free Web Counter"></a> <i><font face="Arial" size="2"> since Nov. 2017</font></i>
 <!-- <a href="/sitemap/">Sitemap</a> -->
 <!-- end custom footer snippets -->
+
